syntax = "proto3";

package schema.services;

import "schema/currency/currency.proto";
import "google/api/annotations.proto"

option go_package = "gen/services";

message CurrentRequest {
    //Code for comparative currency; e.g. USD
    string code = 1 [json_name="code"];
    
    //Code for return price currency; e.g. BRL
    string codeIn = 2 [json_name="codeIn"];
}

message CurrentResponse {
    //Response 
    schema.currency.Currency currency = 1 [json_name="currency"];
}

service CurrencyService {
    rpc GetCurrency(CurrentRequest) returns (CurrentResponse) {
        option (google.api.http) = {
            post: "/v1/comparative-currency"
            body: "*"
        };
    }
}